Added SparkTableExample and documented details on enabling different metastores in readme.md