@@ -13,6 +13,7 @@
    2. [ReadingCsvFile](#l4h2)
    3. [ReadingJsonFileUsingDS](#l4h3)
    4. [UdfExample](#l4h4)
+   5. [SparkTableExample](#l4h5)
 
 
 ### Introduction  
@@ -171,5 +172,131 @@ arguement set  = "data/people_newline_delimited.json"
   * registeration of the udf function will result in serialization of the function
   * and sending the function to executors
 * Register the method with Catalog and use it in SQL expressions
-  *  Note that registering UDF is not enough to use the UDF in the SQL expression
-  *  we need to register with the Catalog using  spark.udf.register. This will register as SQL Function
+  * Note that registering UDF is not enough to use the UDF in the SQL expression
+  * we need to register with the Catalog using  spark.udf.register. This will register as SQL Function
+
+#### SparkTableExample
+<a id="l4h5"></a>
+
+
+**How to enable Hive access in Spark?**
+
+* Add additional dependency in build.sbt file
+org.apache.spark %% spark-hive % sparkVerion
+
+* add ".enableHiveSupport()" option while creating spark session. This options enables connection to Hive Catalog
+
+**Comparing Spark catalog and engine on the lines of database?**
+
+1) Database engine ... this is obvious and it is Spark Engine.
+2) Metadata Catalog ... aka Metastore. Spark provides inmemory catalog by default . Also provides support to change it to persistent external catalog options like Hive metastore and AWS GLue Catalog.
+3) Data Storage ... Managed and External. Managed tables are stored in the path specified by either hive.metastore.warehouse.dir vs spark.sql.warehouse.dir".
+
+More on Metastores:
+
+1) Spark In-memory Catalog. It is maintained for each session so its looses details after session ends.
+2) Hive Catalog. we can enable spark to use Hive Catalog by setting "enableHiveSupport()" while creating spark session.[Databricks doc on enabling Hive metastore](https://docs.databricks.com/data/metastores/external-hive-metastore.html)
+3) AWS GLue Catalog . Besides enabling Hive support, we need to set " hive.metastore.client.factory.class" to ""com.amazonaws.glue.catalog.metastore.AWSGlueDataCatalogHiveClientFactory""
+   more details are available here .[AWS docs on enable AWS GLue catalog](https://docs.aws.amazon.com/emr/latest/ReleaseGuide/emr-spark-glue.html) ,
+   [databricks doc on enable AWS GLue Catalog](https://docs.databricks.com/data/metastores/aws-glue-metastore.html)
+
+
+**what happens when we add .enableHiveSupport() while creating spark session?**
+
+* Enables Hive support in SparkSession (that makes sure that the Hive classes are on CLASSPATH and sets spark.sql.catalogImplementation internal configuration property to hive)
+
+* When not configured by the hive-site.xml, SparkSession automatically creates metastore_db in the current directory and creates a directory configured by spark.sql.warehouse.dir, which defaults to the directory spark-warehouse in the current directory that the Spark application is started. This is what i observed while running the application in IntelliJ IDEA IDE.
+
+* In a production environment, you can deploy a Hive metastore in two modes: local and remote.
+* Local mode : The metastore client running inside a cluster connects to the underlying metastore database directly via JDBC.
+* Remote mode : Instead of connecting to the underlying database directly, the metastore client connects to a separate metastore service via the Thrift protocol. The metastore service connects to the underlying database.
+* for local mode, we need to set javax.jdo options and for remote mode, we need to set hive.metastore.uris option.
+[Setting external-hive-metastore](https://docs.databricks.com/data/metastores/external-hive-metastore.html)
+
+
+**How Spark stores data for the tables?**
+
+Data can be stored externally (specified using location in DDL) or internally (managed tables) (spark.sql.warehouse.dir : Spark / Hive (data) warehouse HDFS folder)
+Sparks default table storage format is parquet
+
+Managed table:
+for creating manged table, we need access to persistent catalog like Hive, GLue
+Manged tables offer bucketing (Oracle hash partitions kind of feature)
+Tables can be created using either dataframe API or Spark.SQL
+
+```
+df.write
+.mode(SaveMode.Overwrite)
+.saveAsTable("table_name")
+
+creating external table:
+df.write
+.mode(SaveMode.Overwrite)
+.option("path", "/path/to/external/table")
+.saveAsTable("emp.employee")
+
+
+
+
+External table using spark sql:
+
+spark.sql("CREATE TABLE table_name (
+col_name int,
+...
+)
+LOCATION "data_file_location"
+USING PARQUET")
+
+
+
+spark.sql("CREATE DATABASE IF NOT EXISTS airline_db")
+
+spark.catalog.setCurrentDatabase("airline_db")
+
+spark.catalog.listTables("airline_db").show() //this shows all tables in the airline_db
+
+```
+
+In spark-shell, executed below commands
+
+```
+
+
+spark.conf.get("spark.sql.catalogImplementation")
+hive
+
+scala> spark.conf.getAll
+res13: Map[String,String] = Map(spark.sql.warehouse.dir -> file:/home/naidu/spark-warehouse, spark.executor.extraJavaOptions -> -XX:+IgnoreUnrecognizedVMOptions --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util..
+
+scala> spark.catalog.currentDatabase
+res16: String = default
+
+
+spark.catalog.listDatabases().foreach(r => print(r.name))
+
+
+```
+
+** what is --conf spark.logConf=true option? **
+
+**hive.metastore.warehouse.dir vs spark.sql.warehouse.dir?**
+* hive.metastore.warehouse.dir is used to specify the default HDFC location on the cluster where Hive stores table data.
+spark.sql.warehouse.dir is used to specify the default HDFC location on the cluster where Spark stores table data.
+* While using AWS Glue , we can use the hive-site configuration classification to specify a location in Amazon S3 for hive.metastore.warehouse.dir, which applies to all Hive tables
+* When Hive Metastore is used with Spark, the property used by Spark to determine the default location for managed tables is hive.metastore.warehouse.dir. However, if you override this property in Spark's configuration using spark.sql.warehouse.dir, Spark will use the latter property instead. It's worth noting that spark.sql.warehouse.dir also affects other Spark components, such as the default location for checkpointing and global temporary views.
+* Note that the hive.metastore.warehouse.dir property in hive-site.xml is deprecated since Spark 2.0.0. Instead, use spark.sql.warehouse.dir to specify the default location of database in warehouse.
+[sql-data-sources-hive-tables](https://spark.apache.org/docs/latest/sql-data-sources-hive-tables.html)
+[how-to-connect-spark-to-remote-hive](https://sparkbyexamples.com/apache-hive/how-to-connect-spark-to-remote-hive/)
+* Alternatively, If you don’t have hive-site.xml, you can also create SparkSession by pointing hive.metastore.uris to the remote Hive cluster metastore. In the below, change the IP address and Port according to your Hive metastore server address and po
+```
+import org.apache.spark.sql.SparkSession
+
+// Create Spark Session with Hive enabled
+val spark = SparkSession.builder().master("local[*]")
+.appName("SparkByExamples.com")
+.config("hive.metastore.uris", "thrift://192.168.1.190:9083")
+.config("spark.sql.warehouse.dir","/users/hive/warehouse")
+.enableHiveSupport()
+.getOrCreate()
+    `
+```
